--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="paper image">
   <p> and I fallen in</p>
     <p>Love with You 😍 </p>
-   <img src="images/1.jpeg" />
+   <img src="https://github.com/hritik1910/shirya_nalayak/blob/main/Images/1.jpeg" />
 </div>
 
 
