--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="./images/3.jpeg" />
+  <img src="images/3.jpeg" />
 </div>
 
 <div class="paper image">
