--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="paper image">
   <p> and I fallen in</p>
     <p>Love with You 😍 </p>
-   <img src="https://github.com/hritik1910/shirya_nalayak/blob/main/Images/1.jpeg" />
+   <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/1.jpeg" />
 </div>
 
 
@@ -26,13 +26,13 @@
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="images/3.jpeg" />
+  <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/3.jpeg" />
 </div>
 
 <div class="paper image">
   <p><span style="color: red !important;">❤️</span></p>
   <p><span style="color: red !important;">❤️</span><span style="color: red !important;">❤️</span></p>
-  <img src="images/2.jpeg" height="400px"/>
+  <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/2.jpeg"/>
 </div>
 
 <div class="paper red">
