--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!-- A pen by Developer Rahul  -->
-<div class="paper heart">
+<!-- by Hritik Singh  -->
+
+  <div class="paper heart">
 
 </div>
 
