--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!-- by Hritik Singh  -->
-
-  <div class="paper heart">
+<!-- Hritik  -->
+<div class="paper heart">
 
 </div>
 
@@ -18,7 +17,7 @@
 <div class="paper image">
   <p> and I fallen in</p>
     <p>Love with You 😍 </p>
-   <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/1.jpeg" />
+   <img src="images/1.jpeg" >
 </div>
 
 
@@ -27,13 +26,13 @@
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/3.jpeg" />
+  <img src="images/3.jpeg" >
 </div>
 
-<div class="paper image">
-  <p><span style="color: red !important;">❤️</span></p>
-  <p><span style="color: red !important;">❤️</span><span style="color: red !important;">❤️</span></p>
-  <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/2.jpeg"/>
+<div class="paper image1">
+  <!-- <p><span style="color: red !important;">❤️</span></p>
+  <p><span style="color: red !important;">❤️</span><span style="color: red !important;">❤️</span></p> -->
+  <img src="images/2.jpeg" height="1000">
 </div>
 
 <div class="paper red">
