--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="paper image1">
   <!-- <p><span style="color: red !important;">❤️</span></p>
   <p><span style="color: red !important;">❤️</span><span style="color: red !important;">❤️</span></p> -->
-  <img src="images/2.jpeg" height="1000">
+  <img src="images/2.jpeg" >
 </div>
 
 <div class="paper red">
