--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="images/3.jpeg" >
+  <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/3.jpeg" >
 </div>
 
 <div class="paper image1">
   <!-- <p><span style="color: red !important;">❤️</span></p>
   <p><span style="color: red !important;">❤️</span><span style="color: red !important;">❤️</span></p> -->
-  <img src="images/2.jpeg" >
+  <img src="https://raw.githubusercontent.com/hritik1910/shirya_nalayak/main/Images/2.jpeg" >
 </div>
 
 <div class="paper red">
